# Arbihedron

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  EXCHANGES.md  FAQ.md  GNN_ARCHITECTURE.md  QUICKSTART.md  README.md  SECURITY.md  alerts.py  analytics.py  arbi  arbihedron_service.py  arbitrage_engine.py  backtest.py  cache.py  compare_engines.py  config.py  coverage.xml  database.py  docker-compose.yml  examples.py  exchange_client.py  executor.py  gnn_arbitrage_engine.py  health_monitor.py  main.py  models.py  monitor.py  performance.py  pyproject.toml  pytest.ini  quick_start.sh  quickref.sh  requirements.txt  (+13 more)
.github/workflows/: ci-cd.yml
docs/: ARCHITECTURE.md  EXCHANGES.md  GNN_ARCHITECTURE.md  INFRASTRUCTURE.md  OVERFITTING_PREVENTION.md  logs.md
models/: gnn_arbitrage_best.pth
monitoring/: prometheus.yml
scripts/: arbi  quick_start.sh  run_tests.sh  setup.sh  test_service.sh
src/arbihedron/: __init__.py  service.py  utils.py
src/arbihedron/core/: __init__.py  arbitrage_engine.py  exchange_client.py  executor.py  gnn_arbitrage_engine.py
src/arbihedron/infrastructure/: __init__.py  cache.py  database.py  error_handling.py
src/arbihedron/monitoring/: __init__.py  alerts.py  analytics.py  monitor.py
src/arbihedron/tools/: __init__.py  backtest.py  compare_engines.py  train_gnn_real.py  view_data.py
tests/: test.py  test_alerts.py  test_analytics.py  test_arbihedron_service.py  test_arbitrage_engine.py  test_cache.py  test_database.py  test_error_handling.py  test_exchange_client.py  test_executor.py  test_gnn.py  test_infrastructure.py  test_integration.py  test_monitor.py  test_performance.py
